--- a/u-c_style.css
+++ b/u-c_style.css
@@ -7,7 +7,7 @@ a:link, a:visited {
     transition: 0.5s;
   }
   div {
-    padding-left: 20rem;
+    padding-left: 35%;
     padding-top: 5rem;
   }
 
